// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComposedLabel horizontal 1`] = `
<div
  className="composed-label is-horizontal"
>
  <span
    className="label-title"
  >
    label: 
  </span>
  valor
</div>
`;

exports[`ComposedLabel horizontal e small 1`] = `
<div
  className="composed-label is-horizontal small"
>
  <span
    className="label-title"
  >
    label: 
  </span>
  valor
</div>
`;

exports[`ComposedLabel render 1`] = `
<div
  className="composed-label"
>
  <span
    className="label-title"
  >
    label
  </span>
  valor
</div>
`;

exports[`ComposedLabel size small 1`] = `
<div
  className="composed-label small"
>
  <span
    className="label-title"
  >
    label
  </span>
  valor
</div>
`;
